<resources>
    <string name="app_name">InventoryTools</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">功率设置</string>
    <string name="settings_power_label">功率（dBm）：</string>
    <string name="settings_power_minus">减</string>
    <string name="settings_power_add">加</string>
    <string name="settings_power_set">设置</string>
    <string name="str_search_items">查找证物</string>
    <string name="str_connect_stat_label">联机状态：</string>
    <string name="str_connect_stat">脱机</string>
    <string name="str_inventory">盘库</string>
    <string name="title_activity_inventory">inventory</string>
    <string name="str_storehouse_num">库房编号：</string>
    <string name="str_btn_start_inventory">开始盘点</string>
    <string name="str_btn_cancel_inventory">退出</string>
    <string name="str_btn_inventory_save">保存</string>

    <string name="red">#FF0000</string>
    <string name="str_rfid_label">标签ID：</string>
    <string name="str_item_name">物品名称：</string>
    <string name="str_write_rfid">写标签</string>
    <string name="title_activity_write_rfid">WriteRfidActivity</string>
    <string name="str_scaninterval">扫描间隔（毫秒）：</string>
    <string name="str_totalcount">总数：</string>
    <string name="str_zero">0</string>
    <string name="str_instore">在库：</string>
    <string name="str_outstore">离库：</string>
</resources>
