<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="#ff293b51"
                android:id="@+id/o">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_search_items"
        android:id="@+id/btn_search_item"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/tv_connect_stat_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_connect_stat_label"
        android:id="@+id/tv_connect_stat_label"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_connect_stat"
        android:id="@+id/tv_connect_stat"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tv_connect_stat_label"
        android:layout_toRightOf="@+id/tv_connect_stat_label"
        android:textColor="#ffff0502"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_inventory"
        android:id="@+id/btn_inventory"
        android:layout_alignBottom="@+id/btn_search_item"
        android:layout_toEndOf="@+id/tv_connect_stat"
        android:layout_toRightOf="@+id/tv_connect_stat"/>

</RelativeLayout>
