<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_rfid_label"
        android:id="@+id/tv_rfid_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_rfid"
        android:layout_alignParentTop="true"
        android:spinnerMode="dialog"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tv_item_name_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_item_name"
        android:id="@+id/tv_item_name_label"
        android:layout_below="@+id/et_itemname"
        android:layout_alignParentLeft="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_itemname"
        android:inputType=""
        android:layout_below="@+id/tv_item_name_label"
        android:layout_toRightOf="@+id/tv_item_name_label"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_write_rfid"
        android:id="@+id/btn_write_rfid"
        android:layout_below="@+id/et_itemname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"/>
</RelativeLayout>